<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AHORCADO" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Numero_intentos" />

    <EditText
        android:id="@+id/edtIntentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5"/>

    <EditText
        android:id="@+id/edtIntroduceLetra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Introduce_letra"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btnComprobar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/COMPROBAR"/>

    <EditText
        android:id="@+id/edtPalabra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="******"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Letras_incorrectas" />

    <EditText
        android:id="@+id/edtLetrasNoEstan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="_____"
        android:enabled="false"/>

    <TextView
        android:id="@+id/txtGameOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GAME_OVER"
        android:visibility="invisible"/>

</LinearLayout>